--- a/hw5/hw5_latex_main.tex
+++ b/hw5/hw5_latex_main.tex
@@ -124,7 +124,7 @@ Similar to the previous problem but with an additional flow.
 In order for there to be the potential for a solution the
 matrix must have rank $s - 1 = 3 - 1 = 2$ which can
 be shown by a zero determinate. The determinate is $-3$
-so no bounded solution exists for unbounded input.
+so no bounded solution exists for unbounded input and no minimum buffer size.
 
 
 
@@ -158,14 +158,14 @@ be shown by a zero determinate.
 
 The determinate is
 \begin{equation}
-| \Gamma | = - 2 \times n + 3 \times 3 = 9 - 2 n
+\det{ \Gamma } = - 2 \times n + 3 \times 3 = 9 - 2 n
 \end{equation}
-Finding those cases when the determinate is zero.
+Finding those cases when the determinate is zero (and the equations are dependent signifying that the rank is less than $3$).
 \begin{align}
 0 & = 9 - 2 n \\
 n & = 9 / 2
 \end{align}
 
-As only integer values of $n$ are allowed then there is no solution.
+As only integer values of $n$ are allowed then there is no solution. Therefore there is no bounded solution for unbounded input, and no minimum buffer size.
 
 \end{document}
